# game-of-life

./: CMakeLists.txt  README.md  life.cpp
